src/objects/Account_Role_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>Account Role Relationships (From)</relationshipLabel>
        <relationshipName>From_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ops_Hierarchy_Group__c</fullName>
        <description>The name of the Operation Hierarchy Group that can vary from the legal name of the parent company if required. The name can be set to whatever is required.</description>
        <label>Ops Hierarchy Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Service</label>
        <referenceTo>Portal_Applications__c</referenceTo>
        <relationshipLabel>Account Role Relationships</relationshipLabel>
        <relationshipName>Account_Role_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <description>It describes the Name of Operational Hierarchy</description>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <label>Relationship Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NDC Player</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>Account Role Relationships (To)</relationshipLabel>
        <relationshipName>To_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Role Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARR-{00000}</displayFormat>
        <label>Account Role Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Role Relationships</pluralLabel>
    <recordTypes>
        <fullName>Flat</fullName>
        <active>true</active>
        <description>Represents a flat grouping where all member Account Roles are peers.</description>
        <label>Flat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hierarchical</fullName>
        <active>true</active>
        <description>Represents a hierarchical grouping where the relationships between all member Account Roles are represented within a hierarchy.</description>
        <label>Hierarchical</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>